auto scroll fixes to gallery section, slideshow description overflow fixes, Social media & nav button animations

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1053,6 +1053,16 @@ input[type="number"] {
         flex-wrap: wrap;
 }
 
+
+.social li > a {
+    filter: grayscale(1);
+    transition: filter 0.15s ease-in-out;
+}
+
+.social li > a:hover {
+    filter: grayscale(0);
+}
+
 #footer-logo {
     position: relative;
     z-index: 1;
@@ -1354,21 +1364,39 @@ input[type="number"] {
     transition: transform 0.5s ease-out, -webkit-transform 0.5s ease-out;
 }
 
+.prev-btn,
+.next-btn {
+    position: absolute;
+    width: 20px;
+    height: 50px;
+    transform: translateY(calc(-50% + 1.5px));
+    filter: grayscale(1);
+    transition: filter 0.15s ease-in-out;
+}
+
+.prev-btn > span,
+.next-btn > span {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url(../images/slider/navigation-btn.png);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    transition: transform 0.15s ease-in-out;
+}
+
+.prev-btn {
+    transform-origin: center;
+    transform: translateY(calc(-50% + 1.6px)) rotate(180deg);
+}
 
 .slideshow-container .prev-btn {
-    top: 50%;
-    left: 0.8%;
-    -webkit-transform: translateY(calc(-50% + 4px));
-        -ms-transform: translateY(calc(-50% + 4px));
-            transform: translateY(calc(-50% + 4px));
+    left: 1.25%;
 }
 
 .slideshow-container .next-btn {
-    top: 50%;
-    right: -0.3%;
-    -webkit-transform: translateY(calc(-50% + 3px));
-        -ms-transform: translateY(calc(-50% + 3px));
-            transform: translateY(calc(-50% + 3px));
+    right: 1.25%;
 }
 
 .slider-container .prev-btn,
@@ -1378,21 +1406,25 @@ input[type="number"] {
     top: 50%;
 }
 
-.slider-container .prev-btn {
-    left: 0;
+.prev-btn > span:nth-of-type(2),
+.next-btn > span:nth-of-type(2) {
+    transform: translateX(-10px);
 }
 
-.slider-container .next-btn {
-    right: 0;
+.prev-btn:hover,
+.next-btn:hover {
+    filter: grayscale(0);
 }
 
-.prev-btn > img:nth-of-type(2),
-.next-btn > img:nth-of-type(2) {
-    -webkit-transform: translateX(-14px);
-    -ms-transform: translateX(-14px);
-    transform: translateX(-14px);
+.prev-btn:hover > span:nth-of-type(1),
+.next-btn:hover > span:nth-of-type(1) {
+    transform: translateX(5px);
 }
 
+.prev-btn:hover > span:nth-of-type(2),
+.next-btn:hover > span:nth-of-type(2) {
+    transform: translateX(-5px);
+}
 
 .popup {
     position: fixed;
